--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@vitejs/plugin-react": "^5.0.0",
     "firebase": "^12.1.0",
+    "framer-motion": "^12.23.22",
     "path": "^0.12.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
